--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,10 +15,10 @@
     <div class="main-content">
          {{>header}}
     
-    <img src="./cloud.jpg" alt=""> 
+    <p>HI this is a heroku page. Created by Yadunanda </p>
+   
+        <img src="./cloud.jpg" alt=""> 
 
-    <h3>My name is {{name}}</h3>
-    <h3>Iam from {{place}}</h3>
     </div>
    
     {{>footer}}
